added getting raw growth records implementation
